MID-9847: Fixing color contrast errors at tiles, lifecycle selector, table rows and sidebar

--- a/gui/admin-gui/src/frontend/scss/_admin-lte-overrides.scss
+++ b/gui/admin-gui/src/frontend/scss/_admin-lte-overrides.scss
@@ -111,3 +111,57 @@
     color: $primary;
   }
 }
+
+//Override for table-success/danger/etc. coloring to fulfill the color contrasts with dark mode available
+@mixin table-background($color) {
+  background-color: mix($white, $color, 88%);
+
+  //Dark mode ready code when dark mode is implemented
+  /*@media (prefers-color-scheme: dark) {
+    background-color: mix($black, $color, 15%); // Dark mode adjustment
+  }*/
+}
+
+@mixin table-row-style($color) {
+  border-color: #dee2e6;
+  @include table-background($color);
+}
+@each $key, $color in $theme-colors {
+  .table-#{$key},
+  .table-#{$key} > th,
+  .table-#{$key} > td {
+    @include table-row-style($color);
+  }
+  .table-hover .table-#{$key}:hover,
+  .table-hover .table-#{$key}:hover > th,
+  .table-hover .table-#{$key}:hover > td {
+    background-color: mix($white, $color, 75%);
+  }
+}
+
+//Bootstrap extension for form selects
+.form-select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.form-item-parent {
+  height: 100%;
+  position: relative;
+
+  & .form-control {
+    padding-right:1.75rem;
+  }
+
+  & .form-item-dropdown {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: 1px;
+    transform: translateY(-50%);
+    color: #555555;
+    font-size: 10.5px;
+    transition: transform 0.1s ease;
+  }
+}
